--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Yash Dangi</title>
-    <link rel="stylesheet" href="CSS/Styles.css">
+    <link rel="stylesheet" href="Styles.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
